--- a/index.html
+++ b/index.html
@@ -67,7 +67,32 @@
           </div>
         </div>
         <!--Caroussel-->
-        Ici un futur carousel
+        <div class="row">
+          <div id="demo" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+              <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+              <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="smilingseniorcouple.jpg" alt="Los Angeles" class="d-block mx-auto img-fluid">
+              </div>
+              <div class="carousel-item">
+                <img src="seniordancing.jpg" alt="Chicago" class="d-block mx-auto img-fluid">
+              </div>
+              <div class="carousel-item">
+                <img src="oldmanmeme.jpg" alt="New York" class="d-block mx-auto img-fluid">
+              </div>
+            </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+              <span class="carousel-control-next-icon"></span>
+            </button>
+          </div>
+        </div>
           
         
         <!--Presentation de l'assoc-->
