Ajustement positions du logo/titre + ajout CSS

--- a/index.html
+++ b/index.html
@@ -3,23 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta rel="stylesheet" type="text/css" href="style.css" />
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
     crossorigin="anonymous"
     />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Drôles De Seniors</title>
   </head>
 
-  <style>
-
-    .logo {
-      width: 40%;
-    }
-
-  </style>
 
 <body class="container-fluid">
   <!--Website bg-->
@@ -62,7 +55,7 @@
             <img class="ddslogo img-fluid" src="./DDSnobg.png">
           </div>
           <!--Main title à personnaliser-->
-          <div class="col mt-5 mx-auto">
+          <div class="col">
             <h1>Association d'evenementiel pour seniors</h1>
           </div>
         </div>
@@ -100,20 +93,24 @@
           <div class="presentation">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo diam ut tortor rutrum fringilla. Ut sed pretium lorem, in lacinia magna. Mauris pellentesque, sem ac aliquet placerat, neque ligula molestie metus, non pharetra est nunc et ligula. Sed a nunc mi. Fusce sollicitudin egestas eros id porttitor. Donec lorem lacus, aliquet sed ornare eget, consectetur sit amet est. Duis varius arcu ac erat lobortis, eu elementum velit rutrum. Suspendisse ut tincidunt ante. Proin id quam sit amet ligula vulputate gravida. Curabitur rhoncus luctus porttitor. Vivamus molestie nibh in scelerisque varius. Vestibulum euismod mauris eu velit malesuada, nec rhoncus purus congue. Praesent mollis sed odio vel finibus. Ut imperdiet tempor mauris. Pellentesque porta, augue vitae efficitur sollicitudin, metus dolor posuere metus, non hendrerit sapien erat eget est.</p>
           </div>
-          <!--Plusieurs card-->
+          <!--Plusieurs card 1 par ligne en mobile, 3 sur ecran large-->
           <div class="row">
-            <article class="card col-6">
+            <article class="card col-4">
               Une première card avec img au top et lien vers evenements
             </article>
-            <article class="card col-3">
+            <article class="card col-4">
               Une deuxième card img top avec lien vers la présentation des bénévoles (inactif)
             </article>
-            <article class="card col-3">
+            <article class="card col-4">
               Une troisième card img top avec lien vers fenêtre modale pour postuler au bénévolat/faire un don
             </article>
           </div>
         </main>
       </div>
+
+      <footer class="row">
+        <div class="col">Le footer fixé en bas de page</div>
+      </footer>
     
     
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
