--- a/events.html
+++ b/events.html
@@ -34,10 +34,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Accueil</a>
+            <a class="nav-link" aria-current="page" href="./index.html">Accueil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="#">Nos evenements à venir</a>
+            <a class="nav-link active" href="./events.html">Nos evenements à venir</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="#">Nos bénévoles</a>
@@ -48,24 +48,70 @@
          </ul>
       </div>
     </nav>
-      <div>
-        <div class="row">
+      <main>
+        <div class="row ">
           <!--Left logo-->
-          <div class="logo col-4">
-            <img class="ddslogo img-fluid" src="./DDSnobg.png">
+          <div class="logo col-1">
+            <a href="./index.html">
+              <img class="ddslogo" src="./images/DDSlogo2.png" alt="ddslogo">
+            </a>
           </div>
           <!--Main title à personnaliser-->
-          <div class="col">
-            <h1>Nos événements à venir</h1>
+          <div class="col maintitle ms-5">
+            <h1>Nos evenements à venirs</h1>
           </div>
         </div>
       
-    <main></main>
+        <section>
+          <table class="table mt-5">
+            <thead>
+              <tr>
+                <th scope="col"></th>
+                <th scope="col">Description</th>
+                <th scope="col">Lieu</th>
+                <th scope="col">Date(s)</th>
+                <th scope="col">Inscription</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">Img</th>
+                <td>Court descriptif</td>
+                <td>lieu</td>
+                <td>date</td>
+                <td>
+                  <div class="d-grid gap-2 col-6">
+                    <button class="btn btn-info" type="button">S'inscrire ici !</button>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">Img</th>
+                <td>Court descriptif</td>
+                <td>lieu</td>
+                <td>date</td>
+                <td>bouton cliquez ici</td>
+              </tr>
+              <tr>
+                <th scope="row">img</th>
+                <td>Court descriptif</td>
+                <td>lieu</td>
+                <td>date</td>
+                <td>bouton cliquez ici</td>
+              </tr>
+            </tbody>
+          </table>
+        </section>
+
+      </main>
 
     <!--Footer fixe-->
-      <footer class="row">
-        <div class="col">©B.Buzin, projet fictif pour Studi</div>
-        <img img src="./DDSsimplenobg.png" alt="DDSsimple" class="ddssimple"
-        <!--Liens vers FB/YT-->
-      </footer>
+    <footer class="row mt-2">
+      <div class="col align-self-center">©B.Buzin, projet fictif pour Studi</div>
+      <div class="social col-6">
+        <p>Rejoignez-nous sur les réseaux sociaux !</p>
+      <!--Ici les logos FB/Twitter/YT-->
+      </div>
+      <img img src="./images/DDSsimplenobg.png" alt="DDSsimple" class="ddssimple col-1">
+    </footer>
         
