--- a/events.html
+++ b/events.html
@@ -1,35 +1,26 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-    crossorigin="anonymous"
-    />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Nos événements - Drôles De Seniors</title>
-  </head>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <title>Nos événements - Drôles De Seniors</title>
+</head>
 
 
 <body class="container-fluid">
   <!--Website bg-->
-  <div class="view" style="background-image: url('./lightbubblebg.png'); background-repeat: repeat; background-size: 100%;">
+  <div class="view"
+    style="background-image: url('./lightbubblebg.png'); background-repeat: repeat; background-size: 100%;">
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand col-4 fw-bold ms-4">Navigation</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"&²
-        aria-label="Toggle navigation"
-      >
-      <span class="navbar-toggler-icon"></span>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" &² aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
@@ -45,73 +36,114 @@
           <li class="nav-item">
             <a class="nav-link disabled" href="#">Contacts</a>
           </li>
-         </ul>
+        </ul>
       </div>
     </nav>
-      <main>
-        <div class="row ">
-          <!--Left logo-->
-          <div class="logo col-1">
-            <a href="./index.html">
-              <img class="ddslogo" src="./images/DDSlogo2.png" alt="ddslogo">
-            </a>
-          </div>
-          <!--Main title à personnaliser-->
-          <div class="col maintitle ms-5">
-            <h1>Nos evenements à venirs</h1>
-          </div>
+    <main>
+      <div class="row ">
+        <!--Left logo-->
+        <div class="logo col-1">
+          <a href="./index.html">
+            <img class="ddslogo" src="./images/DDSlogo2.png" alt="ddslogo">
+          </a>
         </div>
-      
-        <section>
-          <table class="table mt-5">
-            <thead>
-              <tr>
-                <th scope="col"></th>
-                <th scope="col">Description</th>
-                <th scope="col">Lieu</th>
-                <th scope="col">Date(s)</th>
-                <th scope="col">Inscription</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">Img</th>
-                <td>Court descriptif</td>
-                <td>lieu</td>
-                <td>date</td>
-                <td>
-                  <div class="d-grid gap-2 col-6">
-                    <button class="btn btn-info" type="button">S'inscrire ici !</button>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">Img</th>
-                <td>Court descriptif</td>
-                <td>lieu</td>
-                <td>date</td>
-                <td>bouton cliquez ici</td>
-              </tr>
-              <tr>
-                <th scope="row">img</th>
-                <td>Court descriptif</td>
-                <td>lieu</td>
-                <td>date</td>
-                <td>bouton cliquez ici</td>
-              </tr>
-            </tbody>
-          </table>
-        </section>
-
-      </main>
-
-    <!--Footer fixe-->
-    <footer class="row mt-2">
-      <div class="col align-self-center">©B.Buzin, projet fictif pour Studi</div>
-      <div class="social col-6">
-        <p>Rejoignez-nous sur les réseaux sociaux !</p>
-      <!--Ici les logos FB/Twitter/YT-->
+        <!--Main title à personnaliser-->
+        <div class="col maintitle ms-5">
+          <h1>Nos evenements à venirs</h1>
+        </div>
       </div>
-      <img img src="./images/DDSsimplenobg.png" alt="DDSsimple" class="ddssimple col-1">
-    </footer>
-        
+
+      <section>
+        <table class="table mt-5 table-responsive">
+          <thead>
+            <tr>
+              <th scope="col"></th>
+              <th scope="col">Description</th>
+              <th scope="col">Lieu</th>
+              <th scope="col">Date(s)</th>
+              <th scope="col">Inscription</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">Img</th>
+              <td>Détente à St amand</td>
+              <td>lieu</td>
+              <td>date</td>
+              <td>
+                <div class="d-grid gap-2 col-6">
+                  <button class="btn btn-info" type="button">Plus d'infos et reservation ici !</button>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <th scope="row">Img</th>
+              <td>Parcourir les chemins de Compostelle</td>
+              <td>lieu</td>
+              <td>date</td>
+              <td>
+                <div class="d-grid gap-2 col-6">
+                  <button class="btn btn-info" type="button">Plus d'infos et reservation ici !</button>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <th scope="row">Img</th>
+              <td>Découverte de la Dordogne</td>
+              <td>lieu</td>
+              <td>date</td>
+              <td>
+                <div class="d-grid gap-2 col-6">
+                  <button class="btn btn-info" type="button">Plus d'infos et reservation ici !</button>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>Un prochain évènements à venir ici... Revenez-nous rendre visite régulièrement !</td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Un prochain évènements à venir ici... Revenez-nous rendre visite régulièrement !</td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+    </main>
+  </div>
+
+  <!--Footer fixe-->
+  <footer class="row mt-4">
+    <div class="col-5 align-self-center">©B.Buzin, projet fictif pour Studi</div>
+    <div class="col">
+      <p>Rejoignez-nous sur les réseaux sociaux !</p>
+      <li class="list-group list-group-horizontal">
+        <ul>
+          <a href="#">
+            <img src="images/facebook.svg" alt="facebook" class="facebook">
+          </a>
+        </ul>
+        <ul>
+          <a href="#">
+            <img src="images/twitter.svg" alt="twitter" class="twitter">
+          </a>
+        </ul>
+        <ul>
+          <a href="#">
+            <img src="images/youtube.svg" alt="youtube" class="youtube">
+          </a>
+        </ul>
+      </li>
+    </div>
+
+    <div class="col-1 me-5">
+      <img img src="./images/DDSsimplenobg.png" alt="DDSsimple" class="ddssimple" id="hiddenimg">
+    </div>
+  </footer>
+</body>
+
+</html>
