Finalisation page events. Modification des imgs.

--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <link rel="stylesheet" type="text/css" href="style.css" />
   <title>Drôles De Seniors</title>
+  <meta name="description" content="Association d'évènementiel/Séjours vacances pour seniors." />
 </head>
 
 
 <body class="container-fluid">
-  <!--Website bg-->
-  <div class="view"
-    style="background-image: url('./lightbubblebg.png'); background-repeat: repeat; background-size: 100%;">
-    <!--Navbar-->
+  <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand col-4 fw-bold ms-4">Navigation</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -86,7 +84,7 @@
         <h2>Qui sommes-nous ?</h2>
         <div class="presentation">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo diam ut tortor rutrum fringilla.</p>
-          <p>>Ut sed pretium lorem, in lacinia magna. Mauris pellentesque, sem ac aliquet placerat, neque ligula
+          <p>Ut sed pretium lorem, in lacinia magna. Mauris pellentesque, sem ac aliquet placerat, neque ligula
             molestie metus, non pharetra est nunc et ligula. Sed a nunc mi. Fusce sollicitudin egestas eros id
             porttitor. Donec lorem lacus, aliquet sed ornare eget, consectetur sit amet est. Duis varius arcu ac erat
             lobortis, eu elementum velit rutrum.</p>
@@ -100,7 +98,7 @@
           <article class="card col me-3">
             <img src="./images/seniorfun.jpg" class="card-img-top mt-1 img-fluid" alt="event">
             <div class="card-body d-flex flex-column">
-              <h5 class="card-title">L'evenementiel repensé pour vous</h5>
+              <h4 class="card-title">L'evenementiel repensé pour vous</h5>
               <p class="card-text">Parce que nous savons qu'à tout âge on aime découvrir et s'amuser, nous mettons régulièrement en place de nombreux évènements adaptés à nos jeunes seniors !</p>
               <p class="card-text">Du thé dansant au repas spectacle, du week-end détente au séjour vacance, tout y passe ! Etant donné que nos évènements sont crées à l'échelle nationale, un service additionnel de transport vous sera proposé selon votre localisation et vos possibilités : après votre inscription, un membre de l'équipe prendra contact avec vous.</p>
               <a href="./events.html" class="btn btn-info mt-auto align-self-center">Voir nos prochains évènements</a>
@@ -108,15 +106,15 @@
           <article class="card col me-3">
             <img src="./images/help.jpg" class="card-img-top mt-4 img-fluid" alt="benevoles">
             <div class="card-body d-flex flex-column">
-              <h5 class="card-title mt-4">Nos équipes</h5>
-              <p class="card-text">Parce qu'un évènements sans accompagnement, ça n'a pas de sens ! Nos équipes sont là pour vous accompagner de A à Z. Tantôt chauffeur, tantôt animateurs, ils savent ( presque ) tout faire !</p>
-              <p class="card-text">Disponible aux 4 coins de la France, ils n'ont qu'un seul objectif : vous faire passer des moments rempli de joie, de découvertes et de rencontres. Ils vous accompagneront et feront en sorte que l'organisation soit parfaite.</p>
+              <h4 class="card-title mt-4">Nos équipes</h5>
+              <p class="card-text">Parce qu'un évènements sans accompagnement, ça n'a pas de sens ! Nos équipes sont là pour vous accompagner  Ils vous accompagnede A à Z. Tantôt chauffeur, tantôt animateurs, ils savent ( presque ) tout faire !</p>
+              <p class="card-text">Disponibles aux 4 coins de la France, ils n'ont qu'un seul objectif : vous faire passer des moments rempli de joie, de découvertes et de rencontres.ront et feront en sorte que l'organisation soit parfaite.</p>
               <a href="#" class="btn btn-info mt-auto align-self-center">Presentation de notre équipe d'animation</a>
           </article>
           <article class="card col">
             <div class="card-body d-flex flex-column">
               <img src="./images/contact.jpeg" class="card-img-top img-fluid" alt="contact">
-              <h5 class="card-title mt-4">Un petit mot, une question à nous envoyer ?</h5>
+              <h4 class="card-title mt-4">Un petit mot, une question à nous envoyer ?</h5>
               <p class="card-text">Parce que votre avis est important, et que toutes vos interrogations méritent une réponse précise pour dissiper vos derniers doute, n'hésitez pas à nous contacter ! 
               <p class="card-text">Un formulaire de contact est mis en place pour vous. Il y est également possible de demander un rappel téléphonique.</p>
               <a href="#" class="btn btn-info mt-auto align-self-center ">Accéder au formulaire de contact</a>
@@ -124,7 +122,6 @@
         </div>
       </section>
     </main>
-  </div>
   <!--Footer fixe-->
   <footer class="row mt-4">
     <div class="col-5 align-self-center">©B.Buzin, projet fictif pour Studi</div>
@@ -148,7 +145,6 @@
         </ul>
       </li>
     </div>
-
     <div class="col-1 me-5">
       <img img src="./images/DDSsimplenobg.png" alt="DDSsimple" class="ddssimple" id="hiddenimg">
     </div>
