--- a/events.html
+++ b/events.html
@@ -7,115 +7,94 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <link rel="stylesheet" type="text/css" href="style.css" />
+  <meta name="description" content="Retrouvez sur cette page les évènements des Drôles de Seniors !" />
   <title>Nos événements - Drôles De Seniors</title>
 </head>
 
 
 <body class="container-fluid">
-  <!--Website bg-->
-  <div class="view"
-    style="background-image: url('./lightbubblebg.png'); background-repeat: repeat; background-size: 100%;">
-    <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand col-4 fw-bold ms-4">Navigation</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" &² aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="./index.html">Accueil</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="./events.html">Nos evenements à venir</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Nos bénévoles</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Contacts</a>
-          </li>
-        </ul>
+  <!--Navbar-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand col-4 fw-bold ms-4">Navigation</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" &² aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="./index.html">Accueil</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="./events.html">Nos evenements à venir</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Notre équipe</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Contacts</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <main>
+    <div class="row ">
+      <!--logo-->
+      <div class="logo col-1">
+        <a href="./index.html">
+          <img class="ddslogo img-fluid" src="./images/DDSlogo2.png" alt="ddslogo">
+        </a>
       </div>
-    </nav>
-    <main>
-      <div class="row ">
-        <!--Left logo-->
-        <div class="logo col-1">
-          <a href="./index.html">
-            <img class="ddslogo" src="./images/DDSlogo2.png" alt="ddslogo">
-          </a>
-        </div>
-        <!--Main title à personnaliser-->
-        <div class="col maintitle ms-5">
-          <h1>Nos evenements à venirs</h1>
-        </div>
+      <!--Main title-->
+      <div class="col maintitle ms-5 mb-5">
+        <h1>Nos evenements à venirs</h1>
       </div>
-
-      <section>
-        <table class="table mt-5 table-responsive">
-          <thead>
-            <tr>
-              <th scope="col"></th>
-              <th scope="col">Description</th>
-              <th scope="col">Lieu</th>
-              <th scope="col">Date(s)</th>
-              <th scope="col">Inscription</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th scope="row">Img</th>
-              <td>Détente à St amand</td>
-              <td>lieu</td>
-              <td>date</td>
-              <td>
-                <div class="d-grid gap-2 col-6">
-                  <button class="btn btn-info" type="button">Plus d'infos et reservation ici !</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <th scope="row">Img</th>
-              <td>Parcourir les chemins de Compostelle</td>
-              <td>lieu</td>
-              <td>date</td>
-              <td>
-                <div class="d-grid gap-2 col-6">
-                  <button class="btn btn-info" type="button">Plus d'infos et reservation ici !</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <th scope="row">Img</th>
-              <td>Découverte de la Dordogne</td>
-              <td>lieu</td>
-              <td>date</td>
-              <td>
-                <div class="d-grid gap-2 col-6">
-                  <button class="btn btn-info" type="button">Plus d'infos et reservation ici !</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>Un prochain évènements à venir ici... Revenez-nous rendre visite régulièrement !</td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Un prochain évènements à venir ici... Revenez-nous rendre visite régulièrement !</td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-          </tbody>
-        </table>
-      </section>
-    </main>
-  </div>
-
+    </div>
+    <!--évènements-->
+    <section>
+      <div class="row row-cols-1 row-cols-lg-5 row-cols-sm-3 row-cols-1 justify-content-center">
+        <article class="card col me-3 mt-1">
+          <div class="card-body d-flex flex-column">
+            <img src="./images/thermes.jpg" class="card-img-top mt-1 img-fluid" alt="thermal">
+            <h4 class="card-title mt-4">Détente à Saint-Amand-les-Eaux</h5>
+            <p class="card-text">Un week-end pour vous ressourcer et prendre soin de vous !</p>
+            <p class="card-text fw-bold fst-italic">Thermes de Saint-Amand-les-Eaux, Du 04/03/22 au 05/03/22</p>
+            <a href="./events.html" class="btn btn-info mt-auto align-self-center">Plus d'infos et réservation ici !</a>
+        </article>
+        <article class="card col me-3 mt-1">
+          <div class="card-body d-flex flex-column">
+            <img src="./images/compostelle.jpg" class="card-img-top mt-1 img-fluid" alt="compostelle">
+            <h4 class="card-title mt-4">Parcourir le chemin de Compostelle</h5>
+            <p class="card-text">Pour les plus sportifs d'entres-vous et les randoneurs, découvrez
+              une partie de ce pélerinage avec arrêts dans les villages typiques de la région !</p>
+              <p class="card-text fw-bold fst-italic">Départ à Le Puy-en-Velay, département Haute-Loire. Du 24/06/22 au 27/06/22</p>
+            <a href="#" class="btn btn-info mt-auto align-self-center">Plus d'infos et réservation ici !</a>
+          </article>
+          <article class="card col mt-1 me-3">
+            <img src="./images/dordogne.jpg" class="card-img-top mt-5 img-fluid" alt="dordogne">
+            <h4 class="card-title mt-4">Découverte de la Dordogne.</h5>
+              <p class="card-text">Profitez d'un village vacance en Dordogne pour pouvoir découvrir la région.
+                Nombreuses activités et visites de groupe !</p>
+              <p class="card-text fw-bold fst-italic">Village vacance au coeur du Périgord Pourpre, proche du village de Singleyrac. Du 13/07/22 au 20/07/22</p>
+              <a href="./events.html" class="btn btn-info mt-auto align-self-center">Plus d'infos et réservation ici !</a>
+          </article>
+        <article class="card col me-3 mt-1">
+          <div class="card-body d-flex flex-column">
+            <img src="./images/newyear.jpeg" class="card-img-top mt-1 img-fluid" alt="newyear">
+            <h4 class="card-title mt-3">Diner spectacle pour le reveillon de la Saint-Sylvestre</h5>
+            <p class="card-text">Venez célébrer avec nous le passage de la
+              nouvelle année ! Logements à proximité disponibles.</p>
+            <p class="card-text fw-bold fst-italic">Le Grand Cabaret à Vieux-Berquin, Nord-Pas-De-Calais. Le 31/12/22</p>
+            <a href="./events.html" class="btn btn-info mt-auto align-self-center">Plus d'infos et réservation ici !</a>
+        </article>
+        <article class="card col mt-1">
+          <img src="./images/point-d-interrogation.jpg" class="card-img-top mt-3 img-fluid" alt="mystery">
+            <h4 class="card-title mt-2">Evènement à venir !</h5>
+            <p class="card-text fw-bold fst-italic">Revenez nous voir régulièrement.</p>
+          </article>
+      </div>
+    </section>
+  </main>
   <!--Footer fixe-->
   <footer class="row mt-4">
     <div class="col-5 align-self-center">©B.Buzin, projet fictif pour Studi</div>
@@ -139,8 +118,7 @@
         </ul>
       </li>
     </div>
-
-    <div class="col-1 me-5">
+    <div class="col-1">
       <img img src="./images/DDSsimplenobg.png" alt="DDSsimple" class="ddssimple" id="hiddenimg">
     </div>
   </footer>
