Chgmt des img et suppression css inutile

--- a/events.html
+++ b/events.html
@@ -26,7 +26,7 @@
           <a class="nav-link" aria-current="page" href="./index.html">Accueil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="./events.html">Nos evenements à venir</a>
+          <a class="nav-link active" href="./events.html">Nos évènements à venir</a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" href="#">Notre équipe</a>
