Ajout txt presentation association

--- a/index.html
+++ b/index.html
@@ -81,15 +81,9 @@
     <section>
       <h2>Qui sommes-nous ?</h2>
       <div class="presentation">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo diam ut tortor rutrum fringilla.</p>
-        <p>Ut sed pretium lorem, in lacinia magna. Mauris pellentesque, sem ac aliquet placerat, neque ligula
-          molestie metus, non pharetra est nunc et ligula. Sed a nunc mi. Fusce sollicitudin egestas eros id
-          porttitor. Donec lorem lacus, aliquet sed ornare eget, consectetur sit amet est. Duis varius arcu ac erat
-          lobortis, eu elementum velit rutrum.</p>
-        <p>Suspendisse ut tincidunt ante. Proin id quam sit amet ligula vulputate gravida. Curabitur rhoncus luctus
-          porttitor. Vivamus molestie nibh in scelerisque varius. Vestibulum euismod mauris eu velit malesuada, nec
-          rhoncus purus congue. Praesent mollis sed odio vel finibus. Ut imperdiet tempor mauris. Pellentesque porta,
-          augue vitae efficitur sollicitudin, metus dolor posuere metus, non hendrerit sapien erat eget est.</p>
+        <p>L'association Drôles de seniors, créée en 2019 par John Doe a pour but de distraire, permettre l'échange et les rencontres de nos seniors de toutes âges.</p>
+        <p>Nous vous proposons de nombreux évènements dans toute la france, ayant ainsi l'opportunité de quitter votre quotidien, de créer de nouveaux liens et d'échanger avec de nouvelles personnes !</p>
+        <p>En résumé : nous somme créateurs d'amitiées, de souvenirs, d'aventures... Faites-nous confiance et laissez-vous aller, on s'occupe de tout !</p>
       </div>
       <!--Plusieurs card 1 par ligne en mobile, 2 sur tablette, 3 sur ecran large-->
       <div class="row row-cols-1 row-cols-lg-4 row-cols-sm-3 row-cols-1 justify-content-center">
@@ -138,7 +132,7 @@
       <li class="list-group list-group-horizontal">
         <ul>
           <a href="#">
-            <img src="images/facebook.svg" alt="facebook" class="facebook mx-auto ms-4">
+            <img src="images/facebook.svg" alt="facebook" class="facebook ms-4">
           </a>
         </ul>
         <ul>
