--- a/events.html
+++ b/events.html
@@ -76,7 +76,7 @@
               <p class="card-text">Profitez d'un village vacance en Dordogne pour pouvoir découvrir la région.
                 Nombreuses activités et visites de groupe !</p>
               <p class="card-text fw-bold fst-italic">Village vacance au coeur du Périgord Pourpre, proche du village de Singleyrac. Du 13/07/22 au 20/07/22</p>
-              <a href="./events.html" class="btn btn-info mt-auto align-self-center">Plus d'infos et réservation ici !</a>
+              <a href="./events.html" class="btn btn-info mt-auto align-self-center mb-3">Plus d'infos et réservation ici !</a>
           </article>
         <article class="card col me-3 mt-1">
           <div class="card-body d-flex flex-column">
@@ -90,7 +90,7 @@
         <article class="card col mt-1">
           <img src="./images/point-d-interrogation.jpg" class="card-img-top mt-3 img-fluid" alt="mystery">
             <h4 class="card-title mt-2">Evènement à venir !</h5>
-            <p class="card-text fw-bold fst-italic">Revenez nous voir régulièrement.</p>
+            <p class="card-text fw-bold fst-italic mb-3">Revenez nous voir régulièrement.</p>
           </article>
       </div>
     </section>
@@ -103,22 +103,22 @@
       <li class="list-group list-group-horizontal">
         <ul>
           <a href="#">
-            <img src="images/facebook.svg" alt="facebook" class="facebook">
+            <img src="images/facebook.svg" alt="facebook" class="facebook ms-4">
           </a>
         </ul>
         <ul>
           <a href="#">
-            <img src="images/twitter.svg" alt="twitter" class="twitter">
+            <img src="images/twitter.svg" alt="twitter" class="twitter mx-auto">
           </a>
         </ul>
         <ul>
           <a href="#">
-            <img src="images/youtube.svg" alt="youtube" class="youtube">
+            <img src="images/youtube.svg" alt="youtube" class="youtube mx-auto">
           </a>
         </ul>
       </li>
     </div>
-    <div class="col-1">
+    <div class="col-1 me-5">
       <img img src="./images/DDSsimplenobg.png" alt="DDSsimple" class="ddssimple" id="hiddenimg">
     </div>
   </footer>
