Replacement du h2 de l'index, suppr padding footer

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </div> 
     <!--Presentation de l'assoc-->
     <section>
-      <h2>Qui sommes-nous ?</h2>
+      <h2 class="mt-5">Qui sommes-nous ?</h2>
       <div class="presentation">
         <p>L'association Drôles de seniors, créée en 2019 par John Doe a pour but de distraire, permettre l'échange et les rencontres de nos seniors de toutes âges.</p>
         <p>Nous vous proposons de nombreux évènements dans toute la france, ayant ainsi l'opportunité de quitter votre quotidien, de créer de nouveaux liens et d'échanger avec de nouvelles personnes !</p>
